docs. gitlab ssl2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 paginate: true
 alt_title: "데일리블로그"
-image: /assets/bg.png
+image: /assets/images/bg.png
 introduction: |
   매일 뭐라도 하기 위한 블로그
 ---
